// The MIT License
//
// Copyright (c) 2020 Temporal Technologies Inc.  All rights reserved.
//
// Permission is hereby granted, free of charge, to any person obtaining a copy
// of this software and associated documentation files (the "Software"), to deal
// in the Software without restriction, including without limitation the rights
// to use, copy, modify, merge, publish, distribute, sublicense, and/or sell
// copies of the Software, and to permit persons to whom the Software is
// furnished to do so, subject to the following conditions:
//
// The above copyright notice and this permission notice shall be included in
// all copies or substantial portions of the Software.
//
// THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
// IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
// FITNESS FOR A PARTICULAR PURPOSE AND NONINFRINGEMENT. IN NO EVENT SHALL THE
// AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
// LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING FROM,
// OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS IN
// THE SOFTWARE.

syntax = "proto3";

package errordetails;

option go_package = "go.temporal.io/temporal-proto/errordetails";
option java_package = "io.temporal.proto.errordetails";
option java_multiple_files = true;
option ruby_package = "Temporal::Proto";

// These error details extend failures defined in https://github.com/googleapis/googleapis/blob/master/google/rpc/error_details.proto

message NotFoundFailure {
    string currentCluster = 1;
    string activeCluster = 2;
}

message WorkflowExecutionAlreadyStartedFailure {
    string startRequestId = 1;
    string runId = 2;
}

message NamespaceNotActiveFailure {
    string namespace = 1;
    string currentCluster = 2;
    string activeCluster = 3;
}

message RetryTaskFailure {
    string namespaceId = 1;
    string workflowId = 2;
    string runId = 3;
    int64 nextEventId = 4;
}

message RetryTaskV2Failure {
    string namespaceId = 1;
    string workflowId = 2;
    string runId = 3;
    int64 startEventId = 4;
    int64 startEventVersion = 5;
    int64 endEventId = 6;
    int64 endEventVersion = 7;
}

message ClientVersionNotSupportedFailure {
    string clientVersion = 1;
    string clientImpl = 2;
    string supportedVersions = 3;
}

message FeatureVersionNotSupportedFailure {
    string feature = 1;
    string featureVersion = 2;
    string supportedVersions = 3;
}

message CurrentBranchChangedFailure {
    bytes currentBranchToken = 1;
}

message ShardOwnershipLostFailure {
    string owner = 1;
}

message NamespaceAlreadyExistsFailure {
}

message CancellationAlreadyRequestedFailure {
}

message QueryFailedFailure {
}

message EventAlreadyStartedFailure {
}
